[package]
name = "rdu"
version = "0.1.0"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
humansize = "1.1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["fs"] }
futures = "0.3.13"